# DemoSpider

./: .flake8  .gitignore  .pre-commit-config.yaml  AsyncDockerfile  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  scrapy.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pre-commit.yml
DemoSpider/: debug.py  items.py  middlewares.py  pipelines.py  run.py  run.sh  settings.py
DemoSpider/VIT/: .conf  .conf_example
DemoSpider/common/: AboutProj.py  DataEnum.py  types.py  utils.py
DemoSpider/docs/libs/: README.md  scrapy_redis-0.7.3-py2.py3-none-any.whl
DemoSpider/extras/: run_async_scrapy.sh
DemoSpider/spiders/: demo_AyuTurboMysqlPipeline.py  demo_aiohttp_example.py  demo_aiohttp_test.py  demo_aiomysql.py  demo_conf.py  demo_crawl.py  demo_curl_cffi.py  demo_eight.py  demo_eleven.py  demo_es.py  demo_es_async.py  demo_file.py  demo_file_sec.py  demo_five.py  demo_four.py  demo_item_loader.py  demo_item_loader_two.py  demo_kafka.py  demo_mongo_async.py  demo_mq.py  demo_mq_async.py  demo_mq_task.py  demo_mysql_nacos.py  demo_nine.py  demo_one.py  demo_oracle.py  demo_oracle_async.py  demo_oracle_twisted.py  demo_oss.py  demo_oss_sec.py  demo_oss_super.py  demo_proxy.py  demo_proxy_one.py  demo_proxy_two.py  demo_s.py  demo_scrapy.py  demo_seven.py  demo_six.py  demo_ten.py  demo_three.py  (+2 more)
DemoSpider/test/: once.py
