[project]
name = "DemoSpider"
dynamic = ["version", "readme"]
requires-python = ">=3.9,<4.0"
description = "AyugeSpiderTools 的具体场景实现。"
authors = [
    { name = "ayuge", email = "ayugesheng@gmail.com" },
]
maintainers = [
    { name = "ayuge", email = "ayugesheng@gmail.com" },
]
keywords = ["crawler", "scraping", "aiohttp", "asyncio", "scrapy"]
dependencies = [
    "ayugespidertools[all]==3.12.2",
]

[project.urls]
homepage = "https://www.ayuge.top/mkdocs-material/"
repository = "https://github.com/shengchenyang/DemoSpider"
documentation = "https://ayugespidertools.readthedocs.io/en/latest/"

[tool.poetry]
version = "3.12.2"
package-mode = false
readme = ["README.md"]
requires-poetry = "2.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"
black = "24.4.2"
isort = "5.13.2"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disable_error_code = ["attr-defined", "arg-type", "union-attr"]

[[tool.mypy.overrides]]
module = [
    "yaml",
    "toml",
    "pymysql",
    "pymysql.connections",
    "pymysql.cursors",
    "requests",
]
ignore_missing_imports = true
